# Jarvis

./: .env.example  .gitignore  .memory.md  CURRENT_GOAL.md  JARVIS_BUG_BACKLOG.md  JARVIS_USABILITY_REALITY_CHECK.md  OVERNIGHT_QA_STATUS.md  README.md  __init__.py  audit.py  codex_task_queue.md  config.py  planner.py  self_check.py  server.py  tools.py
assets/: Jarvis.icns
docs/: API.md  ARCHITECTURE.md  CAPABILITY_TEST_MATRIX.md  CUA_DRIVER_EVAL.md  CURRENT_GOAL.md  DECISIONS.md  DEFERRED_FEATURES.md  DIRECT_MODEL_OAUTH_DESIGN.md  MORNING_HANDOFF.md  MORNING_REPORT_20260604.md  OPEN_QUESTIONS.md  PROTOTYPE_COMPLETION_AUDIT.md  REMOTE_WORKER.md  ROADMAP.md  SAFETY_MODEL.md  SWIFT_SHELL_PLAN.md  VOICE_LOOP_AUDIT.md
jarvis/: config.py  injection.py  piper_warm_worker.py  planner.py  safety.py  self_check.py  server.py  tools.py  wake.py
rust-core/: Cargo.toml  MIGRATION.md
rust-core/crates/jarvis-audit/: Cargo.toml
rust-core/crates/jarvis-audit/src/: lib.rs
rust-core/crates/jarvis-config/: Cargo.toml
rust-core/crates/jarvis-config/src/: lib.rs
rust-core/crates/jarvis-oauth/: Cargo.toml
rust-core/crates/jarvis-oauth/src/: account.rs  authorize.rs  callback.rs  error.rs  lib.rs  pkce.rs  storage.rs  token.rs
rust-core/crates/jarvis-safety/: Cargo.toml
rust-core/crates/jarvis-safety/src/: lib.rs
rust-core/crates/jarvis-server/: Cargo.toml
rust-core/crates/jarvis-server/src/: main.rs  state.rs
rust-core/crates/jarvis-tools/: Cargo.toml
rust-core/crates/jarvis-tools/src/: codex.rs  lib.rs
scripts/: benchmark_fast_models.py  benchmark_streaming_models.py  cleanup_chrome_test_tabs.py  codex_cli_proxy_benchmark.py  compare_middle_models.py  full_loop_regression.py  generate_tts_audition.py  morning_status.py  open_jarvis.sh  physical_audio_preflight.py  pre_build_gate.py  probe_apple_speech_stt.py  probe_gemma3n_audio.py  render_overnight_status.py  repair_local_stt_model.py  report_refresh.py  run_dashboard.py  run_regression_prompt_matrix.py  smoke_conversation_context.py  smoke_fast_latency.py  smoke_wake_threshold.py  verify_no_prompt.py  verify_safe.py  voice_loop_qa.py
(+34 files in other folders)
