[workspace]
resolver = "2"
members = [
    "crates/jarvis-config",
    "crates/jarvis-safety",
    "crates/jarvis-audit",
    "crates/jarvis-tools",
    "crates/jarvis-oauth",
    "crates/jarvis-server",
]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "time", "fs", "signal"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
