[package]
name = "jarvis-oauth"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
