[package]
name = "jarvis-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "jarvis-server"
path = "src/main.rs"

[dependencies]
jarvis-config = { path = "../jarvis-config" }
jarvis-safety = { path = "../jarvis-safety" }
jarvis-audit = { path = "../jarvis-audit" }
jarvis-tools = { path = "../jarvis-tools" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
